V21 - Horizontal scroll removed

--- a/index.htm
+++ b/index.htm
@@ -17,6 +17,9 @@
     <link rel="stylesheet" href="colors.css" />
     <link rel="stylesheet" href="theme.css" />
     <style>
+      /* --- Minimal, safe fix to remove horizontal scroll everywhere --- */
+      html, body { max-width: 100%; overflow-x: hidden; }
+
       .shadow-soft { box-shadow: 0 10px 30px rgba(0,0,0,0.08); }
       .line-through-muted { text-decoration: line-through; color: #9ca3af; }
     
